Fix about page layout bugs in tablet and mobile view

--- a/client/src/styles/pages/_about.scss
+++ b/client/src/styles/pages/_about.scss
@@ -1,9 +1,9 @@
 .about-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
 
   p {
-    padding: 0 20px;
+    // padding: 0 20px;
   }
 }
 
@@ -40,8 +40,8 @@
   align-items: center;
   background-color: lightgreen;
   border-radius: 100%;
-  width: 6em;
-  height: 6em;
+  min-width: 3em;
+  min-height: 3em;
   margin-bottom: 10px;
 }
 
@@ -50,8 +50,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 20px 0 20px;
-  margin: 0 10px;
+  padding: 20px 10px 0 10px;
+  // margin: 0 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .about-teammate {
@@ -59,8 +61,8 @@
   transition: 0.3s ease-in-out;
   cursor: pointer;
   text-decoration: none;
-  width: 50%;
-  margin: 0 auto;
+  // width: 50%;
+  margin: 0 10px;
 
   &:hover{
     background: lightgreen;
@@ -87,10 +89,17 @@
   }
   .team-member {
     margin: 10px 0;
+    width: 50%;
   }
 
-  .about-teammate:hover {
-    transform: scale(1.05, 1.05);
+  .about-teammate {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    &:hover {
+      transform: scale(1.05, 1.05);
+    }
   }
 }
 
@@ -131,6 +140,7 @@
     padding: 0;
   }
   .about-teammate {
-  width: 100%;
+    width: 100%;
+    margin: 0;
   } 
 }
